--- a/css/signin.css
+++ b/css/signin.css
@@ -32,7 +32,7 @@ and open the template in the editor.
 	display: block;
 	margin: 22px auto 0 auto;
 	
-	background: #f9f9f9;
+	background: rgba(255, 255, 255, 0.14);
 	
 	border: 1px solid #d5d5d5;
 	
