--- a/css/custom.css
+++ b/css/custom.css
@@ -740,7 +740,7 @@ box-shadow:         1px -3px 30px 4px rgba(48, 50, 50, 0.95);
 .propertyImage{
     margin: 0 auto;
     width: 800px;
-    height: 600px;
+    height: auto;
 }
 .propertyImage img{
     max-width:100%; 
