--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body
 	margin-bottom: 40px;
 	//background: rgb(241, 237, 237);
 	//border: 1px solid #C9E0ED;
+       
 }
 
 #header
@@ -61,6 +62,7 @@ body
 {
 	padding:6px 20px 5px 20px;
 	margin:0px;
+        margin-right: -90px;
 }
 
 #mainmenu ul li
@@ -139,7 +141,7 @@ div.view
 	margin: 10px 0;
 	border: 1px solid #C9E0ED;
 }
-
+/*
 div.breadcrumbs
 {
 	font-size: 0.9em;
@@ -152,7 +154,7 @@ div.breadcrumbs span
 {
 	font-weight: bold;
 }
-
+*/
 div.search-form
 {
 	padding: 10px;
@@ -164,7 +166,7 @@ div.search-form
 {
 
 }
-
+/*
 .portlet-decoration
 {
 	padding: 3px 8px;
@@ -202,7 +204,7 @@ div.search-form
 {
 	padding: 2px 0 4px 0px;
 }
-
+*/
 .operations
 {
 	list-style-type: none;
@@ -233,4 +235,51 @@ div.search-form
 .operations li a:hover
 {
 	background: #80CFFF;
+}
+
+.dashboard-strong{
+    margin-left: 30em;
+}
+@media only screen and (min-width: 320px) and (max-width:479px){
+    
+ .dashboard-strong{
+    margin-left: 9em;
+} 
+
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px){
+    
+ .dashboard-strong{
+   margin-left: 20em;
+} 
+}
+
+
+
+@media only screen and (min-width: 768px) and (max-width:838px){
+    
+ .dashboard-strong{
+    margin-left: 12em;
+} 
+
+}
+@media only screen and (min-width: 839px) and (max-width:960px){
+    
+ .dashboard-strong{
+    margin-left: 14em;
+} 
+}
+@media only screen and (min-width: 961px) and (max-width:1025px){
+    
+ .dashboard-strong{
+    margin-left: 16em;
+} 
+}
+@media only screen and (min-width: 1026px) and (max-width:1333px){
+    
+ .dashboard-strong{
+    margin-left: 21em;
+} 
+
 }
