--- a/assets/1d2c92f/detailview/styles.css
+++ b/assets/1d2c92f/detailview/styles.css
@@ -27,12 +27,12 @@ table.detail-view th
 
 table.detail-view tr.odd
 {
-	background:#E5F1F4;
+	background:rgb(61, 188, 219);
 }
 
 table.detail-view tr.even
 {
-	background:#F8F8F8;
+	background:rgb(199, 199, 199);
 }
 
 table.detail-view tr.odd th
