--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body
 	padding: 0;
 	color: #555;
 	font: normal 10pt Arial,Helvetica,sans-serif;
-	background: #EFEFEF;
+	background:rgb(19, 19, 19);
 }
 
 #page
