--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .navbar-inverse .brand {
-    margin-top:4px;
+    margin-top:-4px;
 }
 body
 {
@@ -7,7 +7,8 @@ body
 	padding: 0;
 	color: #555;
 	font: normal 10pt Arial,Helvetica,sans-serif;
-	background:rgb(19, 19, 19);
+	//background:rgb(19, 19, 19);
+         background-image: url('body-bg.png');
 }
 
 #page
