--- a/css/base-admin.css
+++ b/css/base-admin.css
@@ -41,6 +41,7 @@ and open the template in the editor.
 body {
 	//background: #E9E9E9 url(../img/body-bg.png) repeat 0 0;
 	//font: 13px/1.7em 'Open Sans';
+        font-family: 'Raleway', sans-serif;
 }
     
 p { 
