--- a/css/detailview.css
+++ b/css/detailview.css
@@ -10,6 +10,7 @@ and open the template in the editor.
 
 .odd{
     background: white;  
+    font-family: 'Raleway', sans-serif;
    }
    .odd th{
     
@@ -22,13 +23,7 @@ and open the template in the editor.
     background: -webkit-linear-gradient(top, rgb(250, 250, 250) 0%,rgb(233, 233, 233) 100%);
     padding: 15px;
    }
-   @font-face {
-    font-family: 'FontAwesome';
-    src: url('../font/fontawesome-webfont.eot');
-    src: url('../font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('../font/fontawesome-webfont.woff') format('woff'), url('../font/fontawesome-webfont.ttf') format('truetype'), url('../font/fontawesome-webfont.svgz#FontAwesomeRegular') format('svg'), url('../font/fontawesome-webfont.svg#FontAwesomeRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+  
 
 .odd td{
     height: auto;
