--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body
 	margin: 0;
 	padding: 0;
 	color: #555;
-	font: normal 10pt Arial,Helvetica,sans-serif;
+	font-family: 'Raleway', sans-serif;
 	//background:rgb(19, 19, 19);
          background-image: url('body-bg.png');
 }
