--- a/assets/7d883f12/css/bootstrap.css
+++ b/assets/7d883f12/css/bootstrap.css
@@ -4788,7 +4788,8 @@ input[type="submit"].btn.btn-mini {
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
   background-image: -webkit-linear-gradient(top, #222222, #111111);
   background-image: -o-linear-gradient(top, #222222, #111111);
-  background-image: linear-gradient(to bottom, #222222, #111111);
+  //background-image: linear-gradient(to bottom, #222222, #111111);
+  background-image: linear-gradient(to bottom, rgb(141, 68, 0), rgb(141, 68, 0));
   background-repeat: repeat-x;
   border-color: #252525;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
@@ -4796,8 +4797,9 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
-  color: #999999;
+  color: rgb(255, 255, 255);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  font-size: 12px;
 }
 
 .navbar-inverse .brand:hover,
@@ -4808,11 +4810,12 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .brand {
-  color: #999999;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
 }
 
 .navbar-inverse .navbar-text {
-  color: #999999;
+  color: rgb(255, 255, 255);
 }
 
 .navbar-inverse .nav > li > a:focus,
@@ -4825,7 +4828,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .nav .active > a:hover,
 .navbar-inverse .nav .active > a:focus {
   color: #ffffff;
-  background-color: #111111;
+  background-color: rgb(141, 68, 0);
 }
 
 .navbar-inverse .navbar-link {
@@ -4838,8 +4841,8 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .divider-vertical {
-  border-right-color: #222222;
-  border-left-color: #111111;
+  border-right-color: rgba(248, 247, 247, 0.24);
+  border-left-color: rgba(255, 250, 250, 0);
 }
 
 .navbar-inverse .nav li.dropdown.open > .dropdown-toggle,
