--- a/css/main.css
+++ b/css/main.css
@@ -41,11 +41,12 @@ body
 {
 	padding: 10px;
 	margin: 0px 0px;
-	font-size: 0.8em;
+	font-size: 1.0em;
 	text-align: center;
 	//border-top: 1px solid #C9E0ED;
-        background: none repeat scroll 0% 0% #000;
+        background: rgb(141, 68, 0);
         margin-bottom: -42px;
+        color: rgb(255, 255, 255);
 }
 
 #logo
