--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ input[type="checkbox"][readonly] {
 /* Breadcrums */
 .breadcrumbs {
   padding: 7px 14px;
-  margin: 0 0 18px;
+  margin: 70px 0 18px;
   list-style: none;
   background-color: #fbfbfb;
   background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
