--- a/themes/classic/css/custom.css
+++ b/themes/classic/css/custom.css
@@ -11,3 +11,11 @@ and open the template in the editor.
 .formRow{
     height: 50px;
 }
+.urgentMessage{
+    position: absolute;
+    left: 290px;
+    top: 19px;
+    width: 552px;
+    height: 16px;
+    z-index: 100;
+}
